# CipherWeave

./: .env.example  DECISIONS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: deploy.yml
scripts/: invoke_mcp.py  seed_graph.py
src/cipherweave/: __init__.py  cipher_janitor.py  config.py  drift_detector.py  exceptions.py  lambda_handler.py  lifecycle.py  models.py  profiles.py  risk_engine.py  seed_lambda.py  server.py
tests/: benchmarks.py  conftest.py  red_team.py  test_cipher_janitor.py  test_drift_detector.py  test_lifecycle.py  test_risk_engine.py  test_server.py
