[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cipherweave"
version = "0.1.0"
description = "Agentic Cryptography Intelligence Layer — policy-enforced encryption strategy for AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "neo4j>=5.19.0",          # Pure-Python Bolt driver; Lambda-safe; works with Memgraph
    "cryptography>=43.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "mangum>=0.17.0",          # ASGI adapter for AWS Lambda + API Gateway
]

[project.optional-dependencies]
local = [
    "gqlalchemy>=1.4.0",      # Memgraph OGM (requires mgclient C extension; local dev only)
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.360",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cipherweave"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "PTH", "RUF"]
ignore = ["S101", "S311", "S324"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
